get all reviews from a property endpoint